--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   	</head>
   	<body>
-	<!--<i class="fa fa-chevron-left" aria-hidden="true"></i>
-	<span class="fa fa-chevron-right" aria-hidden="true"></span> -->
-	<div id="carousel"> 
+		<div>
+			<i class="fa fa-chevron-left" aria-hidden="true"></i>
+			<i class="fa fa-chevron-right" aria-hidden="true"></i> 
+		</div>	
+		<div id="carousel"> 
 		
 	    <ul class="lista">
 	        <li class= "img-1 element"> </li>
@@ -20,8 +22,18 @@
 	        <li class= "img-5 element"> </li>
 	        <li class= "img-6 element"> </li>
 	    </ul>
-		
-	</div>
+		</div>
+			
+		<div>
+			<ul class="kontrolki">
+				<li class="kolka">  </li>
+				<li class="kolka">  </li>
+				<li class="kolka">  </li>
+				<li class="kolka">  </li>
+				<li class="kolka">  </li>
+				<li class="kolka">  </li>
+			</ul>
+		</div>
 	
 	<script type="text/javascript" src="js/scripts.js"></script>
   	</body>
