--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   	</head>
   	<body>
-		<div>
+		
+		<div class="strzalki">
 			<i class="fa fa-chevron-left" aria-hidden="true"></i>
 			<i class="fa fa-chevron-right" aria-hidden="true"></i> 
 		</div>	
 		<div id="carousel"> 
-		
-	    <ul class="lista">
-	        <li class= "img-1 element"> </li>
-	        <li class= "img-2 element"> </li>
-	        <li class= "img-3 element"> </li>
-	        <li class= "img-4 element"> </li>
-	        <li class= "img-5 element"> </li>
-	        <li class= "img-6 element"> </li>
-	    </ul>
+		    <ul class="lista">
+				<li class= "img-1 element"> </li>
+				<li class= "img-2 element"> </li>
+				<li class= "img-3 element"> </li>
+				<li class= "img-4 element"> </li>
+				<li class= "img-5 element"> </li>
+				<li class= "img-6 element"> </li>
+			</ul>
 		</div>
 			
-		<div>
+		<div id="slidebar">
 			<ul class="kontrolki">
-				<li class="kolka">  </li>
-				<li class="kolka">  </li>
-				<li class="kolka">  </li>
-				<li class="kolka">  </li>
-				<li class="kolka">  </li>
-				<li class="kolka">  </li>
-			</ul>
+				<li class="item-1 fa fa-circle-o"></li>
+				<li class="item-2 fa fa-circle-o"></li>
+				<li class="item-3 fa fa-circle-o"></li>
+				<li class="item-4 fa fa-circle-o"></li>
+				<li class="item-5 fa fa-circle-o"></li>
+				<li class="item-6 fa fa-circle-o"></li>
+			</ol>
 		</div>
 	
 	<script type="text/javascript" src="js/scripts.js"></script>
