--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
     	<meta charset="utf-8">
     	<title>Zadanie 10.3 </title>
-    	<link rel="stylesheet" href="css/style.css"> 
+    	<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
   	</head>
   	<body>
 		
